--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-resource": "^1.3.5"
+    "better-scroll": "^1.7.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
