--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vue-resource": "^1.3.5"
+    "vue-resource": "^1.3.5",
     "better-scroll": "^1.7.0"
   },
   "devDependencies": {
